kubernetes/ohos/acme/acme.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acme-ohos
  namespace: tna-ohos
spec:
  selector:
    matchLabels:
      app: acme-ohos
  template:
    metadata:
      name: acme-ohos
      namespace: tna-ohos
      labels:
        app: acme-ohos
    spec:
      containers:
        - name: acme-container
          image: certbot/certbot
          imagePullPolicy: Always
          ports:
            - name: acme-port
              containerPort: 80
          command:
            - sleep
            - infinity
---
apiVersion: v1
kind: Service
metadata:
  name: acme-service-ohos
  namespace: tna-ohos
spec:
  type: ClusterIP
  selector:
    app: acme-ohos
  ports:
    - name: acme-port
      port: 80
      targetPort: 80
