kubernetes/ohos/acme/acme_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-acme
  namespace: tna-ohos
  annotations:
    konghq.com/protocols: "http"
spec:
  tls:
    - hosts:
        - tna.rosetta.k-int.com
  rules:
    - host: tna.rosetta.k-int.com
      http:
        paths:
          - path: /.well-known/acme-challenge
            pathType: Prefix
            backend:
              service:
                name: acme-service
                port:
                  number: 80
